--- a/services/requirements.txt
+++ b/services/requirements.txt
@@ -2,25 +2,38 @@ aiodns==2.0.0
 aiofiles==0.6.0
 aiohttp==3.7.3
 anyio==2.0.2
+api-client==1.2.1
 async-timeout==3.0.1
 asyncclick==7.1.2.3
 attrs==20.3.0
 cchardet==2.1.7
+certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
 idna==2.10
 importlib-metadata==3.3.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonmarshal==0.0.1
+MarkupSafe==1.1.1
 more-itertools==8.6.0
 multidict==5.1.0
 pycares==3.1.1
 pycparser==2.20
+python-dotenv==0.15.0
 python-kasa==0.4.0.dev2
 python-rapidjson==1.0
+PyYAML==5.3.1
+requests==2.25.1
 six==1.15.0
 sniffio==1.2.0
 tenacity==6.3.1
 toml==0.10.2
 typing-extensions==3.7.4.3
+urllib3==1.26.2
+Werkzeug==1.0.1
 wolframalpha==4.1.1
 xmltodict==0.12.0
 yarl==1.6.3
