--- a/tts/pytts/Dockerfile
+++ b/tts/pytts/Dockerfile
@@ -6,6 +6,8 @@ COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
+RUN apt-get update && apt-get install -y espeak
+
 COPY . /app
 
 CMD ["python", "./server.py"]
