add download model script and update stt docker file to use waitress to serve

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,13 @@ services:
       context: ./stt
     devices:
       - "/dev/snd:/dev/snd"
+    volumes:
+      - type: volumes
+        source: models
+        target: /app/models
+        volume:
+          nocopy: true
+
     environment:
       FLASK_APP: server.py
       STT_MODEL_PATH: /app/models/deepspeech-0.9.3-models.pbmm
